# HomeKitKnock-S3

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  build_errors.txt  platformio.ini  sdkconfig.seeed_xiao_esp32s3  sdkconfig.seeed_xiao_esp32s3_idf  src
.claude/: settings.local.json
data/: README.md  gong.pcm  guide.html  index.html  live.html  logs-camera.html  logs-doorbell.html  logs.html  ota.html  setup.html  sip.html  style.css  tr064.html  wifi-setup.html
docs/:  Mermaid Flowchart — Digest Authentication Logic.md  AUDIO_INTEGRATION.md  ArduinoGestureOLED.ino  CODEX_IMPLEMENTATION_SUMMARY.md  CODEX_WIRING_DIAGRAM.md  CODEX_esp32-s3-doorbell-architecture.md  CURRENT_STATUS.md  EMBEDDED_ASSETS.md  ESP32-Fritzbox-SIP-Documentation.md  GPIO_MAP.md  IDF_ADF_MIGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Mermaid Class Diagram — ESP32 SIP Client Architecture.md  Mermaid SIP Sequence Diagram.md  Mermaid Timing Diagram — SIP Message Timing & Retransmissions.md  OTA_UPDATE_FILE.md  POWER_SUPPLY_DESIGNS.md  PROJECT_BOM.md  QUICK_START.md  README.md  SCRYPTED_RTSP_SETUP.md  SIP Stack Spec.md  SIP-Fritzbox JSON Spec.md  SIP_INTEGRATION.md  TR064_DEBUGGING.md  UPDATING_WEB_INTERFACE.md  WIRING_DIAGRAM.md  _fritzing_template.fz  esp32-s3-doorbell-architecture.md
include/: aac_stream.h  audio.h  cameraAPI.h  cameraStream.h  camera_pins.h  config.h  embedded_guide.h  embedded_index.h  embedded_live.h  embedded_logs-camera.h  embedded_logs-doorbell.h  embedded_logs.h  embedded_ota.h  embedded_setup.h  embedded_sip.h  embedded_style.h  embedded_tr064.h  embedded_web_assets.h  embedded_web_server.h  embedded_wifi-setup.h  logger.h  ota_update.h  rtsp_server.h  sip_client.h  tr064_client.h  version_info.h  wifi_ap.h
partitions/: ota_8mb.csv  ota_8mb_idf.csv
src/: audio.cpp  cameraAPI.cpp  cameraStream.cpp  logger.cpp  main.cpp  ota_update.cpp  rtsp_server.cpp  sip_client.cpp  tr064_client.cpp  wifi_ap.cpp
src_arduino/: CMakeLists.txt  aac_stream.cpp  audio.cpp  cameraStream.cpp  main.cpp  ota_update.cpp  rtsp_server.cpp  sip_client.cpp  (+1 more)
src_idf/components/adf_codec/: CMakeLists.txt
src_idf/components/adf_pipeline/: CMakeLists.txt
(+81 files in other folders)
